# Advanced-Mod-Bot

./: .env.example  .replit  README.md  bot.py  database.sqlite3  main.py  pyproject.toml  replit.nix
cogs/: autorole.py  jail.py  logging.py  moderation.py
utils/: database.py  embeds.py
