[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["a a <46985080-ukdussey1@users.noreply.replit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.6.2"
aiosqlite = "^0.21.0"
discord-interactions = "0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
